Fix test names and stream