@@ -2,7 +2,7 @@ package com.timechaser.service;
 
 import java.util.List;
 import java.util.Optional;
-
+import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -43,7 +43,7 @@ public class RoleService {
         
         return roles.stream()
         		.map(RoleMapper::toDto)
-        		.toList();
+        		.collect(Collectors.toList());
     }
 	
 	@Transactional
